bat.bool1.nearhundred.NearHundred.scala.error
Compilation error:
NearHundred:2: error: ';' expected but 'if' found.
  return true if(n < 10)
              ^